@@ -12,6 +12,10 @@ Laurent Petit <laurent dot petit at gmail dot com>
 
 `0.27.1` released on , 2014
 
+=== Bug fixes
+
+- Fix Issue with Eclipse Kepler (race conditions on plugin startup). Fix Issue #652 - should also prevent some other problems as well
+
 == Changes between Counterclockwise 0.26.0 and 0.27.0
 
 `0.27.0` released on August 21, 2014
